# logfire-demo-hospitality

./: .env.example  .gitignore  Makefile  README.md  prd.md  pyproject.toml
.bt/: config.json
.githooks/: pre-commit
data/: escalation_config.yaml  pms_status.yaml  seeded_tickets.yaml  service_status.yaml
data/docs/: cloudbeds.yaml  hostaway.yaml  mews.yaml  sendgrid.yaml  stripe.yaml  twilio.yaml
evals/: braintrust_eval.py  curated.py  dataset.py  evaluators.py  push_curated.py  run_evals.py
frontend/: index.html
src/: agent.py  config.py  database.py  knowledge.py  llm.py  main.py  models.py  pms_status_app.py  schemas.py  seed.py  status_service_app.py
tests/: test_smoke.py
